CSS word-wrap correction.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,6 @@
 html {
 	background-color: lavenderblush;
 }
+body {
+	word-wrap: initial;
+}
